other/add/add-imagepullsecrets-for-containers-and-initcontainers/podcontroller-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: pod01-01
        image: corp.reg.com/busybox:1.35
      - name: pod01-02
        image: busybox:1.35
      imagePullSecrets:
      - name: my-secret
      - name: foo-bar
