other/add/add-imagepullsecrets-for-containers-and-initcontainers/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-imagepullsecrets-for-containers-and-initcontainers
status:
  ready: true
